--- a/templates/register.html
+++ b/templates/register.html
@@ -2,14 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Регистрация</title>
+    <title>Register</title>
 </head>
 <body>
     <h1>Регистрация</h1>
     <form action="/register" method="POST">
-        <label>Email: <input type="email" name="email" required></label><br>
-        <label>Username: <input type="text" name="username" required></label><br>
-        <label>Password: <input type="password" name="password" required></label><br>
+        <label>Имя пользователя:</label><br>
+        <input type="text" name="username" required><br><br>
+
+        <label>Email:</label><br>
+        <input type="email" name="email" required><br><br>
+
+        <label>Пароль:</label><br>
+        <input type="password" name="password" required><br><br>
+
         <button type="submit">Зарегистрироваться</button>
     </form>
 </body>
